--- a/02.button.html
+++ b/02.button.html
@@ -13,7 +13,9 @@
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
+
         /* https://codepen.io/avstorm/pen/oqKbLq */
+        /* 這個要用sass寫 -.- */
 
         * {
             /* reset */
@@ -92,6 +94,7 @@
             console.log('hello');
             $('a::before').css('width', '120%');
         })
+        // 沒效 Q_Q 
     </script>
 
 
