--- a/02.button.html
+++ b/02.button.html
@@ -61,12 +61,19 @@
             background-color: rgb(255, 157, 173);
             border-radius: 50%;
             z-index: -1;
+            transition: .5s;
         }
 
         i {
             margin-right: 0.5rem;
             transition: .3s;
         }
+
+        a:hover::before {
+            width: 110%;
+            border-radius: 200px;
+        }
+
 
         a:hover i {
             transform: translateX(1rem);
