--- a/04-2.wavy-line.html
+++ b/04-2.wavy-line.html
@@ -30,7 +30,8 @@
         }
 
         .wave::before {
-            content: 'aaaaaaaaaaaaa';
+            content: 'aaaaaaaaaaaaa';  
+            /* 放個字串 但顏色設為透明 */
             position: absolute;
             top: -42px;
             left: 0;
