--- a/05-2.menu.html
+++ b/05-2.menu.html
@@ -10,6 +10,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <style>
+
+        /* :root {
+            --color: #aaffaa; 
+        } */
+
         * {
             margin: 0;
             padding: 0;
@@ -27,49 +32,64 @@
 
         ul {
             position: relative;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
         }
 
         ul li {
+            position: relative;
             list-style-type: none;
         }
 
         a {
+            position: relative;
             text-decoration: none;
             font-size: 4rem;
             /* Prefix required. Even Firefox only supports the -webkit- prefix */
-            -webkit-text-stroke-width: 2px;
-            -webkit-text-stroke-color: rgb(249, 137, 163);
+            -webkit-text-stroke: 1px var(--color);
             color: transparent;
             letter-spacing: 0.3rem;
         }
 
         a::before {
-            content: '';
+            content: attr(data-text)"";
+            /* https://developer.mozilla.org/zh-TW/docs/Web/CSS/attr#%E7%AF%84%E4%BE%8B */
             position: absolute;
-            color: var(--clr); 
+            color: var(--color); 
             /* 顏色使用變數形式 */
-            border: 5px solid #fff;
+            /* https://developer.mozilla.org/en-US/docs/Web/CSS/--* */
+            width: 0;
+            overflow: hidden;
+            transition: 1s;
+            border-right: 8px solid var(--color);
+            -webkit-text-stroke: 1px var(--color);
+        }
 
+        a:hover::before {
+            width: 100%;
+            /* -webkit-text-stroke: 1px var(--color); */
+            filter: drop-shadow(0 0 25px var(--color));
         }
     </style>
 </head>
 
 <body>
     <ul>
-        <li style="">
-            <a href="#">&nbsp;Home&nbsp;</a>
+        <li style="--color:#00ade1">
+            <a href="#" data-text="&nbsp;Home">&nbsp;Home&nbsp;</a>
         </li>
-        <li style="">
-            <a href="#">&nbsp;About&nbsp;</a>
+        <li style="--color:#ff6493">
+            <a href="#" data-text="&nbsp;About">&nbsp;About&nbsp;</a>
         </li>
-        <li style="">
-            <a href="#">&nbsp;Services&nbsp;</a>
+        <li style="--color:#ffdd1c">
+            <a href="#" data-text="&nbsp;Services">&nbsp;Services&nbsp;</a>
         </li>
-        <li style="">
-            <a href="#">&nbsp;Team&nbsp;</a>
+        <li style="--color:#00dc82">
+            <a href="#" data-text="&nbsp;Team">&nbsp;Team&nbsp;</a>
         </li>
-        <li style="">
-            <a href="#">&nbsp;Contact&nbsp;</a>
+        <li style="--color:#dc00d4">
+            <a href="#" data-text="&nbsp;Contact">&nbsp;Contact&nbsp;</a>
         </li>
     </ul>
 </body>
